<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1"
    android:orientation="vertical">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/CampoVIda">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/CampoPV">

            <TextView
                android:text="@string/pv_lbl"
                android:layout_width="44dp"
                android:layout_height="wrap_content"
                android:id="@+id/textView2"
                android:textSize="18sp"
                android:textStyle="normal|bold" />

            <EditText
                android:layout_width="105dp"
                android:layout_height="wrap_content"
                android:inputType="numberSigned"
                android:ems="10"
                android:id="@+id/edt_pv" />

            <TextView
                android:text="@string/pvAtual_lbl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView3"
                android:textSize="18sp"
                android:textStyle="normal|bold" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="numberSigned"
                android:ems="10"
                android:id="@+id/edt_pvAtual"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/CampoDano">

            <TextView
                android:text="@string/dano_lbl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView6"
                android:layout_weight="1"
                android:textSize="18sp"
                android:textStyle="normal|bold" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="numberSigned"
                android:ems="10"
                android:id="@+id/edt_dano"
                android:layout_weight="1" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@android:drawable/ic_input_add"
                android:id="@+id/btn_addDano"
                android:layout_weight="1" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/CampoCA">

        <TextView
            android:text="CA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/CA"
            android:layout_weight="0.28"
            android:textSize="18sp"
            android:textStyle="normal|bold" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/edt_ca"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/CampoIniciativa">

        <TextView
            android:text="Iniciativa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView9"
            android:layout_weight="0.30"
            android:textSize="18sp"
            android:textStyle="normal|bold" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/edt_iniciativa"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="62dp"
        android:id="@+id/CampoBaseAtaque">

        <TextView
            android:text="Bonus Base de Ataque"
            android:layout_width="153dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView10"
            android:textStyle="normal|bold"
            android:textSize="18sp" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/edt_baseAtaque"
            android:layout_weight="1"
            android:inputType="text" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/CampoFortitude">

        <TextView
            android:text="Fortitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView15"
            android:layout_weight="1"
            android:textSize="18sp"
            android:textStyle="normal|bold" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/edt_fortitude"
            android:layout_weight="1" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/CampoReflexo">

        <TextView
            android:text="Reflexo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView18"
            android:layout_weight="1"
            android:textSize="18sp"
            android:textStyle="normal|bold" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/edt_reflexo"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/CampoVontade">

        <TextView
            android:text="Vontade"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView19"
            android:layout_weight="1"
            android:textSize="18sp"
            android:textStyle="normal|bold" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/edt_vontade"
            android:layout_weight="1" />
    </LinearLayout>

</LinearLayout>
